Category add, edit and remove endpoints
