# src/server/tools/swagger/static/v1.swagger.json
@@ -150,13 +150,6 @@
             "required": false,
             "type": "integer",
             "default": 1
-          },
-          {
-            "name": "userId",
-            "in": "path",
-            "required": false,
-            "type": "integer",
-            "default": 1
           }
         ],
         "responses": {
@@ -283,6 +276,29 @@
             "description": "successful operation"
           }
         }
+      },
+      "post": {
+        "tags": [
+          "Category"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation"
+          }
+        }
       }
     },
     "/category/{categoryId}": {
@@ -305,6 +321,55 @@
             "type": "integer",
             "default": 1
           }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "Category"
+        ],
+        "parameters": [
+          {
+            "name": "categoryId",
+            "in": "path",
+            "required": false,
+            "type": "integer",
+            "default": 1
+          },
+          {
+            "in": "body",
+            "name": "body",
+            "description": "",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Category"
+        ],
+        "parameters": [
+          {
+            "name": "categoryId",
+            "in": "path",
+            "required": false,
+            "type": "integer",
+            "default": 1
+          },
         ],
         "responses": {
           "200": {
